# telegram_miniapp

./: Cargo.toml  README.md  replacements.txt  sample.json
src/: main.rs  openai.rs  state.rs
src/routes/: chat.rs  games.rs  media.rs  quiz.rs  voting.rs
src/telegram/: api.rs
static/app/: chat.html  index.html  upload.html  voting.html
static/uploads/: 3e0caf02-0944-47fd-ad50-cba636ec7029_upload.html
